# ChangeLog for dev-ruby/ruby-gnomevfs
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/ruby-gnomevfs/Attic/ChangeLog,v 1.25 2008/04/22 18:06:11 graaff Exp $

  22 Apr 2008; Hans de Graaff <graaff@gentoo.org>
  -ruby-gnomevfs-0.12.0.ebuild:
  Remove old version

*ruby-gnomevfs-0.16.0 (07 Apr 2008)

  07 Apr 2008; Hans de Graaff <graaff@gentoo.org>
  +ruby-gnomevfs-0.16.0.ebuild:
  Long overdue version bump.

  02 Apr 2008; Christian Faulhammer <opfer@gentoo.org>
  ruby-gnomevfs-0.15.0.ebuild:
  stable x86, bug 215149

  30 Mar 2008; Raúl Porcel <armin76@gentoo.org>
  ruby-gnomevfs-0.15.0.ebuild:
  alpha/ia64 stable wrt #215149

  29 Mar 2008; Brent Baude <ranger@gentoo.org> ruby-gnomevfs-0.15.0.ebuild:
  Marking ruby-gnomevfs-0.15.0 ppc for bug 215149

  28 Mar 2008; Ferris McCormick <fmccor@gentoo.org>
  ruby-gnomevfs-0.15.0.ebuild:
  Add ~sparc, part of Bug #215149 (this one has tests, and they pass).

  28 Mar 2008; Hans de Graaff <graaff@gentoo.org>
  -ruby-gnomevfs-0.10.1.ebuild, -ruby-gnomevfs-0.11.0.ebuild,
  -ruby-gnomevfs-0.14.1.ebuild:
  Remove old versions

  17 Jan 2008; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Add missing pkg-config dependency. Thanks Patrick in bug #206214.

  17 Jan 2008; Diego Pettenò <flameeyes@gentoo.org>
  ruby-gnomevfs-0.15.0.ebuild:
  Add missing pkg-config dependency. Thanks Patrick in bug #206213.

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  18 Sep 2006; Nguyễn Thái Ngọc Duy <pclouds@gentoo.org>
  files/digest-ruby-gnomevfs-0.12.0, Manifest:
  Redigest ruby-gnome2-all-0.12.0.tar.gz, #147173

*ruby-gnomevfs-0.15.0 (30 Aug 2006)

  30 Aug 2006; Nguyễn Thái Ngọc Duy <pclouds@gentoo.org>
  +ruby-gnomevfs-0.15.0.ebuild:
  Version bump

  08 Aug 2006; Luis Medinas <metalgod@gentoo.org>
  ruby-gnomevfs-0.14.1.ebuild:
  Added ~amd64 keyword.
