@@ -1,11 +1,11 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/ruby-gtkglext/Attic/ruby-gtkglext-0.16.0.ebuild,v 1.6 2008/04/02 07:53:07 opfer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/ruby-gtkglext/Attic/ruby-gtkglext-0.16.0.ebuild,v 1.7 2008/05/15 20:46:47 maekke Exp $
 
 inherit ruby ruby-gnome2
 
 DESCRIPTION="Ruby GtkGLExt bindings"
-KEYWORDS="alpha ~amd64 ia64 ppc sparc x86"
+KEYWORDS="alpha amd64 ia64 ppc sparc x86"
 IUSE=""
 USE_RUBY="ruby18 ruby19"
 DEPEND=">=x11-libs/gtkglext-1.0.3
