@@ -1,11 +1,11 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/ruby-gtkmozembed/Attic/ruby-gtkmozembed-0.16.0.ebuild,v 1.6 2008/04/02 07:55:23 opfer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/ruby-gtkmozembed/Attic/ruby-gtkmozembed-0.16.0.ebuild,v 1.7 2008/05/15 20:47:55 maekke Exp $
 
 inherit ruby ruby-gnome2
 
 DESCRIPTION="Ruby/GTK bindings for Mozilla"
-KEYWORDS="~amd64 ~ia64 ~ppc ~sparc x86"
+KEYWORDS="amd64 ~ia64 ~ppc ~sparc x86"
 IUSE="seamonkey"
 USE_RUBY="ruby18 ruby19"
 DEPEND="seamonkey? ( >=www-client/seamonkey-1.0 )"
