@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/ruby-gtkmozembed
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/ruby-gtkmozembed/Attic/ChangeLog,v 1.12 2008/04/22 18:15:40 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/ruby-gtkmozembed/Attic/ChangeLog,v 1.13 2008/05/15 20:47:55 maekke Exp $
+
+  15 May 2008; Markus Meier <maekke@gentoo.org>
+  ruby-gtkmozembed-0.16.0.ebuild:
+  amd64 stable, bug #215149
 
   22 Apr 2008; Hans de Graaff <graaff@gentoo.org>
   -ruby-gtkmozembed-0.15.0.ebuild:
