@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/ruby-gnomevfs
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/ruby-gnomevfs/Attic/ChangeLog,v 1.25 2008/04/22 18:06:11 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/ruby-gnomevfs/Attic/ChangeLog,v 1.26 2008/05/15 20:45:30 maekke Exp $
+
+  15 May 2008; Markus Meier <maekke@gentoo.org> ruby-gnomevfs-0.15.0.ebuild:
+  amd64 stable, bug #215149
 
   22 Apr 2008; Hans de Graaff <graaff@gentoo.org>
   -ruby-gnomevfs-0.12.0.ebuild:
